# bathymetry

./: .gitignore  README.md  pyproject.toml  setup.py
bathymetry/: constants.py  create_blue_earth_polygons.py  create_depth_poly_tiles.sh  create_tiles.py  preprocess_blue_earth.py  preprocess_raster.py
