[tool.poetry]
name = "bathymetry"
version = "0.0.1"
description = "Processing tools for creating bathymetry tiles for web maps"
authors = ["Brendan Ward <bcward@astutespruce.com>"]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.1"
pyogrio = "^0.7.2"
pyarrow = "^14.0.2"
shapely = "^2.0.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
rasterio = "^1.3.9"
